# Morpho

./: .gitignore  Cargo.toml  README.md  TODO.md
benches/: lang_benches.rs
src/: lib.rs  parser.lalrpop
src/ast/: mod.rs
src/program/: mod.rs
src/program/environment/: mod.rs
src/program/evaluating_functions/: mod.rs
src/program/function/: mod.rs
src/program/module/: mod.rs
src/program/primitive_functions/: mod.rs
src/program/value/: mod.rs
tests/integration_test/: Cargo.toml
tests/integration_test/src/: main.rs
tests/unit/: unit.test.rs
