[package]
name = "func_lang"
version = "0.1.0"
edition = "2021"

[[test]]
name = "unit"
path = "tests/unit/unit.test.rs"

[build-dependencies]
lalrpop = "0.22.0"

[dependencies]
lalrpop-util = {version = "0.22.0", features = ["lexer"]}
anyhow = "1.0.90"
lazy_static = "1.5.0"
clap = {version = "4.5.20", features = ["derive"]}
uuid = { version = "1", features = ["v4"] }
