[package]
name = "morpho_c"
version = "0.1.0"
edition = "2021"

[[test]]
name = "unit"
path = "tests/unit/unit.test.rs"

[[bench]]
name="lang_benches"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
lalrpop = "0.22.0"

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1


[dependencies]
lalrpop-util = {version = "0.22.0", features = ["lexer"]}
anyhow = "1.0.90"
lazy_static = "1.5.0"
clap = {version = "4.5.20", features = ["derive"]}
uuid = { version = "1", features = ["v4"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-log = "0.2.0"
trees = { version = "0.4.2" }
